--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "LaterList",
   "version": "1.0.0",
-  "description": "Project 2 Starter",
+  "description": "Project 2",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -15,6 +15,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mysql": "^2.17.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
@@ -26,5 +27,17 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diborad-d/Project2.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/diborad-d/Project2/issues"
+  },
+  "homepage": "https://github.com/diborad-d/Project2#readme"
 }
