--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "Jackson22",
     "database": "exampledb",
     "host": "localhost",
     "dialect": "mysql"
