--- a/package.json
+++ b/package.json
@@ -1,41 +1,28 @@
 {
-  "name": "LaterList",
+  "name": "project2",
   "version": "1.0.0",
-  "description": "Project 2",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "lint": "eslint **/*.js --quiet",
-    "fix": "eslint --fix .",
-    "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mysql": "^2.17.1",
-    "mysql2": "^1.5.3",
-    "sequelize": "^4.38.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7"
-  },
+  "description": "",
+  "main": "grant.js",
   "directories": {
     "test": "test"
+  },
+  "dependencies": {
+    "config.json": "^0.0.4",
+    "dotenv": "^8.2.0",
+    "express-handlebars": "^3.1.0",
+    "mysql": "^2.17.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "mocha",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/diborad-d/Project2.git"
   },
   "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/diborad-d/Project2/issues"
   },
