--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "Jackson22",
-    "database": "exampledb",
+    "password": "",
+    "database": "sequelize_library",
     "host": "localhost",
     "dialect": "mysql"
   },
