--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "firebaseui": "^4.2.0",
+    "material-components-web": "^4.0.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
