added card starter to the myList page

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "",
+    "password": "Jackson22",
     "database": "sequelize_library",
     "host": "localhost",
     "dialect": "mysql"
